--- a/BipBipBot/BipBipBot/BipBipBot.csproj
+++ b/BipBipBot/BipBipBot/BipBipBot.csproj
@@ -11,4 +11,14 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="appsettings.json" Condition="Exists('appsettings.json')">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IrcNetLib.Core\IrcNetLib.Core.csproj" />
+  </ItemGroup>
+
 </Project>
