Work on extensions

--- a/BipBipBot/Bip.Tests/Bip.Tests.csproj
+++ b/BipBipBot/Bip.Tests/Bip.Tests.csproj
@@ -20,6 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\BipBipBot\BipBipBot.csproj" />
       <ProjectReference Include="..\IrcNetLib.Core\IrcNetLib.Core.csproj" />
     </ItemGroup>
 
