--- a/BipBipBot/BipBip.Extensions.Abstractions/BipBip.Extensions.Abstractions.csproj
+++ b/BipBipBot/BipBip.Extensions.Abstractions/BipBip.Extensions.Abstractions.csproj
@@ -2,4 +2,7 @@
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
+    <ItemGroup>
+      <PackageReference Include="System.Reactive" Version="5.0.0" />
+    </ItemGroup>
 </Project>
