--- a/BipBipBot/BipBipBot/BipBipBot.csproj
+++ b/BipBipBot/BipBipBot/BipBipBot.csproj
@@ -6,9 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BipBip.Extensions.Abstractions" Version="1.0.0" />
+    <PackageReference Include="IrcDotNet" Version="0.7.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,7 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\IrcNetLib.Core\IrcNetLib.Core.csproj" />
+    <ProjectReference Include="..\BipBip.Extensions.Logger\BipBip.Extensions.Logger.csproj" />
   </ItemGroup>
+
+
 
 </Project>
