--- a/BipBipBot/BipBip.Extensions.Abstractions/BipBip.Extensions.Abstractions.csproj
+++ b/BipBipBot/BipBip.Extensions.Abstractions/BipBip.Extensions.Abstractions.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <LangVersion>default</LangVersion>
+        <AssemblyVersion>1.0.0</AssemblyVersion>
+        <Version>1.0.0</Version>
+        <PackageVersion>1.0.0</PackageVersion>
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="System.Reactive" Version="5.0.0" />
